<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <include
        android:id="@+id/headertoolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_below="@+id/headertoolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradientimage">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/image_size10"
            android:layout_marginRight="@dimen/image_size10">


            <TextView
                android:id="@+id/tvResetPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:gravity="center"
                android:layout_marginBottom="@dimen/image_size5"
                android:textColor="@color/white"
                android:textSize="@dimen/image_size10"/>

            <EditText
                android:id="@+id/edEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size40"
                android:layout_marginBottom="@dimen/image_size5"
                android:drawableLeft="@drawable/ic_key"
                android:hint="@string/email_address_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:background="@drawable/edbackground"
                />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_size40"
                android:layout_marginTop="@dimen/image_size5"
                android:background="@drawable/roundbutton"
                android:text="@string/reg_screen_submit"
                android:textSize="@dimen/image_size10"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
