<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="find.eze.ezefind.Activities.StartPackingActivity">


    <include
        android:id="@+id/headertoolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <RelativeLayout
        android:id="@+id/relativeStartPacking"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size35"
        android:clickable="true"
        android:layout_below="@id/headertoolbar"
        android:background="@drawable/bg_tab_pressed"
        >

        <TextView
            android:id="@+id/tvStartPacking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/image_size10"
            android:text="@string/invite"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relativeSearch"
        android:layout_below="@+id/relativeStartPacking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="#CECFD0">

            <EditText
                android:id="@+id/edSearch"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:drawableLeft="@drawable/search_icon"
                android:hint="@string/search"
                android:layout_weight="1"
                android:padding="5dp"
                android:singleLine="true"
                android:textSize="12dp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textColor="@color/black"
                android:textColorHint="#CECFD0"
                android:background="@drawable/edbackground"/>

            <Button
                android:id="@+id/btnInviteSelected"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/invite_selected"
                android:textSize="12dp"
                android:textAllCaps="false"
                android:textColor="#CECFD0"
                android:singleLine="true"
                android:background="@drawable/edbackground"/>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_below="@+id/relativeSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/startpackingscreencolor">


        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:id="@+id/recyclerViewInvite"
            android:scrollbars="vertical"
            android:scrollbarSize="5dp"
            android:scrollbarThumbVertical="@drawable/scrollbarcolor"
            android:scrollbarFadeDuration="0"
            android:fadeScrollbars="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>


    </FrameLayout>

</RelativeLayout>
